welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: ';' expected but '=' found.
  c: Int = 0
         ^golomb:4: error: ';' expected but '=' found.
  j: Int = 0
         ^